2004/01/05 21:55 (-0500) muppetman

	* xs/GtkRc.xs: gperl_object_type_from_package takes a string, not
	a scalar.

2004/01/05 11:41 (-0500) rwmcfa1

	* xs/GdkWindow.xs: merged get_children and peek_children into one
	function that always uses peek children since we're copying the list
	anyway. also fixes decent bug where list was being freed from 
	peek_children which would of likely caused big problems.

	* xs/GdkRegion.xs, xs/GdkWindow.xs, xs/GtkCellRenderer.xs,
	xs/GtkContainer.xs, xs/GtkTreeModel.xs, xs/GtkWidget.xs,
	xs/GtkWindow.xs: doc updates. some just made =for xxx, some fixed bad
	doc. just added new doc. complete according to doc_helper.pl at this 
	point.

2004/01/04 21:41 (-0500) rwmcfa1

	* t/accel-group-map.t: test out newly implemented xsubs

	* xs/GtkAccelMap.xs: implemented some missing xsubs, foreach's and
	lookup_entry

	* xs/GtkRc.xs: implemented gtk_rc_get_style_by_paths

2004/01/04 19:11 (-0500) rwmcfa1

	* pm/SimpleList.pm, pm/SimpleMenu.pm: quit using base and just add the 
	parent type to @ISA by hand. this will prevent some problems with
	co-existing (really old) inline versions of Gtk2-Perl.

2004/01/04 11:49 (-0500) rwmcfa1

	* xs/GdkWindow.xs: for some reason get_pointer was having issues with 
	certian versions of perl/xsubpp. it seemed to be related to the both
	having a return value and having OUTLIST's. this implements it as a 
	PPCODE section doing the same thing.

2004/01/04 02:50 (+0100) kaffeetisch

	* t/10.GtkProgressBar.t: Test get_orientation, get_fraction,
	[sg]et_text, and [sg]et_pulse_step.

	* t/14.GtkToolbar.t: Test get_orientation, unset_style, get_style,
	and get_tooltips.

	* xs/GtkInvisible.xs: Add a class parameter to new_for_screen.

2004/01/02 02:13 (+0100) kaffeetisch

	* t/16.GtkMenu-etc.t: Test [sg]et_accel_group, set_accel_path,
	[sg]et_title, [sg]et_tearoff_state, reposition, attach_to_widget,
	get_attach_widget, detach, set_screen, [sg]et_active, and popdown.
